metronome layout first edition

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+    --light-grey: #525252;
+    --nice-red: #fa545c;
+    --nice-white: #dddddd;
+    --nice-pinkie: #ff656c;
+}
+
+body {
+    color: var(--light-grey);
+    font-family: 'Raleway', sans-serif;
+}
